# holochain-chat-learning

test/: index.js  package.json
zomes/messages/: zome.json
zomes/messages/code/: .build  Cargo.toml
zomes/messages/code/src/: lib.rs
zomes/users/code/: Cargo.toml
zomes/users/code/src/: lib.rs
